--- a/UngineScrollingShooter/package.json
+++ b/UngineScrollingShooter/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "html-inline-script-webpack-plugin": "^3.2.1",
+    "url-loader": "^4.1.1",
+    "vue": "^3.3.13",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  }
 }
